--- a/gallery/gal/templates/base.html
+++ b/gallery/gal/templates/base.html
@@ -1,14 +1,22 @@
-{% load bootstrap %}
+{% load bootstrap3 %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    {% if title %}
+    <title>Piga Picha -{{title}}</title>
+    {% else %}
+    <title>Piga Picha</title>
+    {% endif %}
+
 </head>
 <body>
+    {%block content %}
+    <h1 class="display-4">Lens Queen</h1>
+    <p>Change your lens, change your story</p>
+    {% end block %}
+
     
 </body>
 </html>
