--- a/gallery/gal/templates/all-photos/navbar.html
+++ b/gallery/gal/templates/all-photos/navbar.html
@@ -12,6 +12,27 @@
             <div class="nabar-header">
                 <a class="navbar-brand" href="{% url 'welcome' %">LEN$ QUEEN</a>
             </div>
+
+        <div class="col-sm-4 col-md- navbar-right">
+            <form class="navbar-form" role="search" action="{%url 'search_category' %}">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Category" name="photocategory">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glypicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-sm-4 md-4 navbar-right">
+            <form class="navbar-form" role="search" action="{% url 'search_location'%}">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Filter by location" name="photolocation">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-serach"></i></button>
+                    </div>
+                </div>
+            </form>
+        </div>
         </div>
     </nav>
     
