--- a/gallery/gal/templates/all-photos/welcome.html
+++ b/gallery/gal/templates/all-photos/welcome.html
@@ -2,4 +2,29 @@
 
 {%block content %}
 {{block.super}}
-{%end block %}
+
+<div class="container">
+    <div class="px-lg-5">
+        <div class="row">
+            {% for image in photos %}
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-transparent rounded shadow-sm">
+                    <img data-toggle="modal" data-target="#{{image.image_name}}" class="text-center" id="zoom" src="{{image.photo_image.url}}" alt="{{image.image_name}}" style="width:100%;max-width:500px;padding-top:10px;height:300px;" >
+                </div>
+            </div>
+            <div class="modal fade bd-example-modal-lg" id="{{image.image_name}}" tableindex="-1" role="dialog" aria-labelledby="exampleModalCenetrTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h5 class="modal-title" id="exampleModalLongTitle" style ="margin-left:20%;">Image Title: {{image.image_name}}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        
+                        </div>
+                        <!-- <div class="modal-body text-center" style="background-image:url(")></div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{%endblock%}
