Connect CSS file to base template.

--- a/gallery/gal/templates/all-photos/base.html
+++ b/gallery/gal/templates/all-photos/base.html
@@ -13,7 +13,8 @@
 
     {% block styles %}
         {% bootstrap_css %}
-    {% end block %}
+        <link rel="stylesheet" href="{% static 'css/basephotos.css'%}">
+    {% endblock %}
 
 </head>
 <body>
@@ -21,7 +22,7 @@
     {%block content %}
     <h1 class="display-4">Lens Queen</h1>
     <p>Change your lens, change your story</p>
-    {% end block %}
+    {% endblock %}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
