Create template file that will display seach by category result.

--- a/gallery/gal/templates/all-photos/searchcategory.html
+++ b/gallery/gal/templates/all-photos/searchcategory.html
@@ -1,5 +1,87 @@
-{% extends 'all-photos/base.html'%}
+{%extends 'all-photos/base.html'%}
 
-{%block content %}
+{% block content %}
+
 {{block.super}}
-{%end block %}
+
+<div class="container">
+
+    <div class="row">
+
+        {% if categoryphotos %}
+        <h1 style="color: white; text-align: left; margin-left: 10%;">Found {{ categoryphotos|length }} of searched
+            category {{message}}
+        </h1>
+
+
+
+        <!-- Gallery item -->
+
+        {% for image in categoryphotos %}
+        <div class="row" style="margin-left: 10%;">
+
+            <a href="{% url 'singlephoto' image.id %}">
+                <img src="{{image.photo_image.url}}" height=300px; width=300px; alt="Image" style="height: 300px; ">
+            </a>
+
+            <div class="p-4">
+                <h5> Name: {{ image.image_name }}</h5>
+                <h5> Location: {{ image.location }}</h5>
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                    Zoom
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Category: {{image.category}}</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <h3>Location: {{image.location}}</h3>
+                                <div>
+                                    <a href="{% url 'singlephoto' image.id %}"> <img class="img-fluid card-img-top"
+                                            style="height:80%; width: 100%;" src="{{image.photo_image.url}}"
+                                            alt="photo"></a>
+                                </div>
+                                <div>
+                                    <h5 style="text-align: left;">Click image to view more</h5>
+                                </div><br>
+                            </div>
+                            <div class="modal-footer">
+
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
+
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+</div>
+{% else %}
+<h1 style="color:white"> Found 0 categories for the search term {{message}}</h1>
+{% endif %}
+
+
+
+</div>
+</div>
+{% endblock %}
