Create template file that displays images.

--- a/gallery/gal/templates/all-photos/photodetail.html
+++ b/gallery/gal/templates/all-photos/photodetail.html
@@ -3,4 +3,34 @@
 {%block content %}
 {{block.super}}
 
+<div class="container" style="margin-left:18%;">
+    <div class="row">
+        <img id="targetimage" src="{{photo.photo.url}}" class="img-responsive" alt="" height="30%" width="50%">
+
+        <div class="p-4">
+            <h1>Title: {{photo.image_name}}</h1>
+            <p>Description: {{photo.description}}</p>
+            <p>Location: {{photo.location}}</p>
+            <p>Category: {{photo.category}}</p>
+            <p>Posted: {{photo.pub_date|timesince}}</p>
+
+            <div>
+                <div>
+                    <button class="btn btn primary" style="background-color:thistle;" onclick="imageurl('{{image.id}}-url');">Copy image link</button><br>
+                </div><br>
+                <input class="form-control input-lg" type="text" value="{{photo.photo_imagge.url}}" id="{{image.id}}-url">
+            </div>
+            <script>
+                function imageiurl(element){
+                    var image = document.getElementById(element);
+                    image.select();
+                    document.execCommand('copy');
+                    alert("Copied the link of image:"+image.value);
+                }
+            </script>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
 {%end block %}
