--- a/gallery/gal/templates/all-photos/base.html
+++ b/gallery/gal/templates/all-photos/base.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    {% include "navbar.html" %}
+    {% include "all-photos/navbar.html" %}
     {%block content %}
     <h1 class="display-4">Lens Queen</h1>
     <p>Change your lens, change your story</p>
@@ -26,7 +26,7 @@
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        {% bootstrap_javasacript %}
+        {% bootstrap_javascript %}
     {% endblock %}
 
     
