--- a/gallery/gal/templates/all-photos/welcome.html
+++ b/gallery/gal/templates/all-photos/welcome.html
@@ -1,30 +1,64 @@
-{% extends 'all-photos/base.html'%}
+{% extends 'all-photos/base.html' %}
 
-{%block content %}
+{%block content%}
+
 {{block.super}}
 
 <div class="container">
     <div class="px-lg-5">
         <div class="row">
-            {% for image in photos %}
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-                <div class="bg-transparent rounded shadow-sm">
-                    <img data-toggle="modal" data-target="#{{image.image_name}}" class="text-center" id="zoom" src="{{image.photo_image.url}}" alt="{{image.image_name}}" style="width:100%;max-width:500px;padding-top:10px;height:300px;" >
+    {% for image in photos %}
+    <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-transparent rounded shadow-sm">
+               
+                        <img data-toggle="modal" data-target="#{{image.image_name}}" class="text-center" id="zoom"
+                        src="{{image.photo_image.url}}" alt="{{image.image_name}}" style="width:100%;max-width:500px;padding-top:10px;height: 300px;">
+    </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade bd-example-modal-lg" id="{{image.image_name}}" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h5 class="modal-title" id="exampleModalLongTitle" style="margin-left: 20%;">Image Title: {{image.image_name}}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-            </div>
-            <div class="modal fade bd-example-modal-lg" id="{{image.image_name}}" tableindex="-1" role="dialog" aria-labelledby="exampleModalCenetrTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header text-center">
-                            <h5 class="modal-title" id="exampleModalLongTitle" style ="margin-left:20%;">Image Title: {{image.image_name}}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        
+                <div class="modal-body text-center" style="background-image:url('http://digitalimagemakerworld.com/images/background-hd-wallpapers/36347065-background-hd-wallpapers.jpg');">
+                    <img src="{{image.photo_image.url}}" alt="{{image.image_name}}" style="width:100%;max-width:500px;text-align: center;">
+                    <h5 style="margin-top: 10px;">Description: {{image.description}}</h5>
+                    <h5>Category: {{image.category}}</h5>
+                    <h5>Location: {{image.location}}</h5>
+                    <h5>Posted: {{image.pub_date|timesince}} ago</h5>
+                    <div style="padding-top:10px;">
+                        <input class="form-control input-lg" type="text" style="width:60%; margin-left: 20%;"
+                            value="{{image.photo_image.url}}" id="{{image.id}}-url">
+                        <div style="padding-top:10px;">
+                            <button class="btn btn-primary" onclick="imageurl('{{image.id}}-url');">Copy Link</button><br>
                         </div>
-                        <!-- <div class="modal-body text-center" style="background-image:url(")></div> -->
                     </div>
+                    <script>
+                        function imageurl(element) {
+                            var image = document.getElementById(element);
+                            image.select();
+                            document.execCommand('copy');
+                            alert("Copied the link of image:" + image.value);
+                        }
+                    </script>
+                    <!-- End of copy -->
+                   
+                </div>
+                <div class="modal-footer">
+                    <!-- <p>{{image.description}}</p> -->
                 </div>
             </div>
         </div>
     </div>
+    {%endfor%}
+    </div>
+    </div>
+    <!-- End -->
 </div>
-{%endblock%}
+{% endblock %}
