--- a/gallery/gal/templates/all-photos/base.html
+++ b/gallery/gal/templates/all-photos/base.html
@@ -20,8 +20,8 @@
 <body>
     {% include "all-photos/navbar.html" %}
     {%block content %}
-    <h1 class="display-4">Lens Queen</h1>
-    <p>Change your lens, change your story</p>
+<!--     <h1 class="display-4">Lens Queen</h1> -->
+    <p><em><strong>Change your lens, change your story</strong></em></p>
     {% endblock %}
 
     {% block scripts %}
